# BitBlade

./: (off)CMakePresets.json  .gitignore  BitBlade.cpp  BitBlade.h  CMakeLists.txt  CMakePresets.json  README.md
BitBladeConsole/: BladeConsole.cpp  BladeConsole.h  CMakeLists.txt
BitBladeConsole/BladeGraphics/include/: BladeGraphics.h  DisplayDriver.h  FrameBuffer.h  ImageBuffer.h  ImageData.h  ImageLoader.h  PixelColor.h  PixelOperations.h  SpriteObject.h
BitBladeConsole/BladeGraphics/src/: BladeGraphics.cpp  ImageBuffer.cpp  ImageData.cpp  SpriteObject.cpp
BitBladeConsole/BladeGraphics/src/windows/: DisplayDriver.cpp  ImageLoader.cpp  PixelOperations.cpp
BitBladeConsole/BladeLink/: CMakeLists.txt
BitBladeGameEngine/: CMakeLists.txt
BitBladeGameEngine/BladeConsole/include/: BladeConsole.h
BitBladeGameEngine/BladeConsole/include/windows/: ConsoleLink.h
BitBladeGameEngine/BladeConsole/src/: BladeConsole.cpp
BitBladeGameEngine/BladeConsole/src/windows/: ConsoleLink.cpp
BitBladeGameEngine/include/: BitBlade.h  BitBladeGame.h  BladeRun.h  Component.h  DataCluster.h  DataPool.h  GameObject.h  ImageSource.h  PoolObject.h  Prefab.h  Sprite.h  Vector2.h
BitBladeGameEngine/src/: BitBladeGame.cpp  Component.cpp  GameObject.cpp  ImageSource.cpp  Prefab.cpp  Sprite.cpp
BitBladeGraphics/: CMakeLists.txt
BitBladeGraphics/include/: BladeGraphics.h
BitBladeGraphics/include/windows/: GraphicsLink.h
BitBladeGraphics/src/: BladeGraphics.cpp  MasterSpriteData.cpp
BitBladeGraphics/src/windows/: GraphicsLink.cpp  ImageLoader.cpp
BitBladeTestGame/: CMakeLists.txt  main.cpp
BitBladeTestGame/include/: TestGame.h
BitBladeTestGame/src/: TestGame.cpp
BladeCommon/: CMakeLists.txt
BladeCommon/include/: BladeConfig.h  Delegate.h  Event.h  GfxLinkCommon.h  IGfxMessageLink.h  IGfxMessagePacker.h  IGfxMessageProducer.h  Logging.h
BladeConsole/: CMakeLists.txt  main.cpp
BladeConsole/BladeGameEngine/include/: BitBladeGame.h
BladeConsole/BladeGameEngine/src/: BitBladeGame.cpp  Prefab.cpp
BladeConsole/BladeTestGame/include/: TestGame.h
BladeConsole/BladeTestGame/src/: TestGame.cpp
BladeConsole/include/: AbstractConsoleLink.h  BladeConsole.h  GameEngine.h  GraphicsConnector.h
BladeConsole/include/windows/: ConsoleLink.h
BladeConsole/src/: AbstractConsoleLink.cpp  BladeConsole.cpp  GameEngine.cpp  GraphicsConnector.cpp
BladeConsole/src/windows/: ConsoleLink.cpp
BladeGameEngine/: CMakeLists.txt
BladeGameEngine/BladeConsole/include/windows/: ConsoleLink.h
BladeGameEngine/BladeConsole/src/: BladeConsole.cpp
BladeGameEngine/components/include/: Sprite.h  Transform.h
BladeGameEngine/components/src/: Sprite.cpp  Transform.cpp
BladeGameEngine/include/: BitBladeGame.h  BladeStart.h  Component.h  DataCluster.h  DataPool.h  DataPoolMember.h  DataTypeID.h  GameObject.h  IBladeGame.h  ImageSource.h  Sprite.h  Vector2.h
BladeGameEngine/src/: BitBladeGame.cpp  GameObject.cpp  ImageSource.cpp  Sprite.cpp
BladeGraphics/: CMakeLists.txt  main.cpp  main.h
BladeGraphics/include/: BladeGraphics.h  BladeGraphicsProcessor.h  ConsoleConnector.h  IGraphicsLink.h  ImageLoader.h  MasterSpriteData.h  PixelOperations.h  SpriteInstance.h  SpriteObject.h
BladeGraphics/include/windows/: GraphicsLink.h
BladeGraphics/src/: BladeGraphics.cpp  BladeGraphicsProcessor.cpp  SpriteInstance.cpp  SpriteObject.cpp
BladeGraphics/src/windows/: ConsoleConnector.cpp  GraphicsLink.cpp
BladeTestGame/: CMakeLists.txt  main.cpp
BladeTestGame/components/: CMakeLists.txt
BladeTestGame/components/include/: Hero.h  ObjectUpdatePrinter.h  QuitTimer.h
BladeTestGame/components/src/: ObjectUpdatePrinter.cpp
BladeTestGame/include/: TestGame.h
BladeTestGame/src/: TestGame.cpp
Common/: CMakeLists.txt
Common/include/: BitBladeCommon.h  BladeLink.h  BladeLinkBufferHelper.h  BladeLinkCommon.h  CallbackProcessMessage.h  GfxCommand.h  IBladeLink.h
Common/include/windows/: BladeLink.h
Common/src/windows/: BladeLink.cpp
Tests/: CMakeLists.txt
Tests/BladeGameEngine/: CMakeLists.txt
Tests/BladeGameEngine/include/: BitBladeGame_test.h  DataPoolTypes.h  DataPoolTypes_test.h  DebugComponents.h  GameComponents_test.h  GameTestRunner.h  GfxTestPacker_test.h  MockComponent.h
Tests/BladeGameEngine/src/: BitBladeGame_testDriver.cpp  DataCluster_test.cpp  DataCluster_testDriver.cpp  DataPool_test.cpp  DataPool_testDriver.cpp  DebugComponents.cpp  Event_testDriver.cpp  GfxPacking_testDriver.cpp  TransformComponent_testDriver.cpp
